# wikicrawl

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.stub  LICENSE  Makefile  README.md  codecov.yml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.config/grafana/provisioning/dashboards/: dashboards.yaml  wikicrawl.json
.config/grafana/provisioning/datasources/: datasource.yml
.config/loki/: config.yaml
.config/prometheus/: config.yaml
.config/rabbitmq/: enabled_plugins
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yaml  RELEASE.yaml
docs/: CONTRIBUTING.md  database.md  dockerCompose.md  gettingStarted.md  monitoring.md  python.md  stub.md  taskQueue.md  ubiquitousLanguage.md
scripts/: startup
src/core/: pyproject.toml
src/core/tests_core/: test_datetime.py  test_logging.py  test_parser.py  test_utils.py  test_wikipedia.py
src/core/wikicrawl/core/: datetime.py  parser.py  settings.py  utils.py  wikipedia.py
src/core/wikicrawl/core/logging/: __init__.py  loki.py
src/crawl/: pyproject.toml
src/crawl/tests_crawl/: test_crawl.py  test_utils.py
src/crawl/wikicrawl/crawl/: __init__.py  settings.py  utils.py
src/database/: pyproject.toml
src/database/tests_database/: conftest.py  test_dao.py
src/database/wikicrawl/database/: dao.py  neo4j.py  settings.py
src/stub/: pyproject.toml
src/stub/tests_stub/: conftest.py  test_generator_wiremock.py  test_stub.py
src/stub/wikicrawl/stub/: __init__.py  __main__.py  generators.py  settings.py
src/workers/: pyproject.toml
src/workers/tests_workers/: conftest.py  test_celery.py  test_crawler.py  test_metrics.py  test_recorder.py
src/workers/wikicrawl/workers/: __init__.py  celery.py  crawler.py  metrics.py  recorder.py  settings.py
