[tool.poetry]
name = "wikicrawl-core"
version = "0.1.0"
description = "Wikicrawl core library."
authors = ["JulianMaurin <julian.maurin.dev@proton.me>"]
license = "Apache License 2.0"
packages = [
    { include = "wikicrawl" },
]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.5.0"
retry = "^0.9.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
freezegun = "^1.2.1"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
