[tool.poetry]
name = "wikicrawl-crawl"
version = "0.1.0"
description = "Generate wikipedia stub."
authors = ["JulianMaurin <julian.maurin.dev@proton.me>"]
license = "Apache License 2.0"
packages = [
    { include = "wikicrawl" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.1^"
environs = "^9.5.0"
amqp = "^5.1.1"
wikicrawl-core = "^0.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
wikicrawl-core = { path = "../core/", develop = true }
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-aiohttp = "^1.0.4"
aioresponses = "^0.7.3"
coverage = {extras = ["toml"], version = "^6.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


