[tool.poetry]
name = "wikicrawl-database"
version = "0.1.0"
description = "Wikicrawl database module."
authors = ["JulianMaurin <julian.maurin.dev@proton.me>"]
license = "Apache License 2.0"
packages = [
    { include = "wikicrawl" },
]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.5.0"
wikicrawl-core = "^0.1.0"
retry = "^0.9.2"
py2neo = "^2021.2.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
wikicrawl-core = { path = "../core/", develop = true }
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


