[tool.poetry]
name = "wikicrawl-stub"
version = "0.1.0"
description = "Generate wikipedia stub."
authors = ["JulianMaurin <julian.maurin.dev@proton.me>"]
license = "Apache License 2.0"
packages = [
    { include = "wikicrawl" },
]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.5.0"
click = "^8.1.3"
redis = "^4.3.1"
wikicrawl-core = "^0.1.0"
wikicrawl-crawl = "^0.1.0"

[tool.poetry.dev-dependencies]
wikicrawl-core = { path = "../core/", develop = true }
wikicrawl-crawl = { path = "../crawl/", develop = true }
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4"}
fakeredis = "^1.8"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


